Logs/log_2021 03 27 16.27.05.txt
2021-03-27 16:27:05,874 - 
Downloading Utility Log. 
Log started.

Move log to Impt Logs if required as only the 10 most recent logs are kept.

2021-03-27 16:27:06,747 - Command: def ini_youtube_api():
2021-03-27 16:27:06,757 - Command:     api_key = "AIzaSyB7q5HYJfFt1ctb5wcIZVn7_YGygQj7yGA"
2021-03-27 16:27:06,757 - Command: 
2021-03-27 16:27:06,773 - Command:     youtube = googleapiclient.discovery.build(
2021-03-27 16:27:06,803 - Command:         "youtube", "v3", developerKey=api_key) #No need for OAuth 2.0 Authentication jeez I was so damn tired.
2021-03-27 16:27:06,804 - Command: 
2021-03-27 16:27:06,977 - Command:     Downloader.apis["youtube"] = youtube
2021-03-27 16:27:16,343 - Command: dl -youtube https://www.youtube.com/channel/UCPxHg4192hLDpTI2w7F9rPg
2021-03-27 16:27:16,343 - youtube link
2021-03-27 16:27:16,345 - expected an indented block (youtube.py, line 62)
Traceback (most recent call last):
  File "c:/Utilities/Scripts/url-dl-v2/main.py", line 240, in <module>
    parse_input()
  File "c:/Utilities/Scripts/url-dl-v2/main.py", line 121, in parse_input
    from extractors.youtube import youtube_extractor
  File "c:\Utilities\Scripts\url-dl-v2\extractors\youtube.py", line 62
    api_key = "AIzaSyB7q5HYJfFt1ctb5wcIZVn7_YGygQj7yGA"
    ^
IndentationError: expected an indented block
2021-03-27 16:27:16,346 - 
Log Ended.
Total time: 0 hrs 0 min 10.47 sec

